--- a/platforms/common/scss/admin/particles/_filepicker.scss
+++ b/platforms/common/scss/admin/particles/_filepicker.scss
@@ -221,6 +221,7 @@
                         padding: 4px;
                         background-color: rgba(255, 255, 255, 0.5);
                         border-radius: 50px;
+                        line-height: 1em;
 
                         .g-file-progress-text {
                             position: absolute;
